# QBDI

./: .appveyor.yml  .travis.yml  CMakeLists.txt
cmake/: QBDIConfig.cmake  QBDIOptions.cmake
cmake/config/: config-android-ARM.sh  config-iOS-ARM.sh  config-linux-ARM.sh  config-linux-X86.sh  config-linux-X86_64.sh  config-macOS-X86.sh  config-macOS-X86_64.sh  config-win-X86.py  config-win-X86_64.py
docker/archlinux/: Dockerfile.X86  Dockerfile.X86_64  PKGBUILD.X86  PKGBUILD.X86_64  build.sh
docker/travis_linux/: base_X86.dockerfile  base_X86_64.dockerfile  gtest.sh  llvm.sh  qbdi.dockerfile  qbdi.sh
docker/ubuntu_debian/: Dockerfile  build.sh
docker/ubuntu_debian_devel/: Dockerfile  build.sh
include/QBDI/: InstAnalysis.h  Options.h  VM.h  VM_C.h
package/: CMakeLists.txt  launch_docker_packager.sh
package/android_ARM_docker_packager/: Dockerfile
package/android_X86_64_docker_packager/: Dockerfile
package/android_X86_docker_packager/: Dockerfile
package/linux_ARM_docker_packager/: Dockerfile
src/Engine/: Engine.cpp  Engine.h  VM.cpp  VM_C.cpp
src/ExecBlock/: ANDROID-ARM_Stub.s  Context.cpp  Context.h  ExecBlock.cpp  ExecBlock.h  ExecBlockManager.cpp  ExecBlockManager.h  OSX-X86_64_Stub.s  OSX-X86_Stub.s
src/ExecBroker/: ExecBroker.cpp  ExecBroker.h
src/Patch/: InstInfo.h  InstrRule.cpp  InstrRule.h  RegisterSize.h
src/Patch/X86_64/: ExecBlockFlags_X86_64.cpp  InstInfo_X86_64.cpp  RegisterSize_X86_64.cpp
src/Utility/: InstAnalysis.cpp  LogSys.cpp  LogSys.h  Memory.cpp  Memory_ANDROID.cpp
test/: CMakeLists.txt  QBDITest.cpp
test/API/: MemoryAccessTest.cpp  MemoryAccessTest.h  RangeTest.cpp  VMTest.cpp  VMTest.h
test/ExecBlock/: ExecBlockManagerTest.cpp  ExecBlockManagerTest.h  ExecBlockTest.cpp  ExecBlockTest.h
test/Patch/: ComparedExecutor_ARM.h  ComparedExecutor_X86.h  ComparedExecutor_X86_64.h  Instr_ARMTest.cpp  Instr_ARMTest.h  Instr_X86_64Test.cpp  Instr_X86_64Test.h  Patch_ARMTest.cpp  Patch_ARMTest.h  Patch_X86_64Test.cpp  Patch_X86_64Test.h
test/TestSetup/: InMemoryAssembler.cpp  InMemoryAssembler.h  LLVMTestEnv.cpp  LLVMTestEnv.h  ShellcodeTester.cpp  ShellcodeTester.h
tools/: CMakeLists.txt
tools/QBDIPreload/: CMakeLists.txt
tools/QBDIPreload/src/: darwin_preload.c  linux_preload.c
tools/pyqbdi/: CMakeLists.txt
tools/validator/: linux_validator.cpp
